# cppTemplate

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  README_BUILDING.md  README_CLANGFORMAT.md  README_CLANGTIDY.md  README_DEVCONTAINERJSON.md  README_DOCKER.md  appveyor.yml  conanfile.txt
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
Readmes/: README_BUILDING.md  README_CLANGFORMAT.md  README_CLANGTIDY.md  README_CMAKEFORMAT.md
configured_files/: config.hpp.in
css/: my_custom_theme.css
exec/: CMakeLists.txt
include/: informations.hpp  lib.hpp
instructions/: README_CLANGTIDY.md  README_DEVCONTAINERJSON.md  README_DOCKER.md
src/: CMakeLists.txt  informations.cpp  lib.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
